--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <!-- Custom -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/467e36b8ac.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">    
+    <!-- <link rel="stylesheet" href="https://use.fontawesome.com/467e36b8ac.css"> -->
+    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">    
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
